Stop footer spanning full bleed.

--- a/06_project_blog/src/assets/styles/mediaQueries.css
+++ b/06_project_blog/src/assets/styles/mediaQueries.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 480px) {
     body {
-        padding: var(--padding-large);
+        margin-bottom: var(--padding-large);
     }
 
     ul.header-nav-list {
