--- a/06_project_blog/src/assets/styles/styles.css
+++ b/06_project_blog/src/assets/styles/styles.css
@@ -109,12 +109,12 @@ img {
 
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: grid;
     padding: var(--padding-large);
     /* padding-bottom: var(--padding-large); */
     grid-template-columns: minmax(0, auto) minmax(auto, 736px) minmax(0, auto);
-    grid-template-rows: auto auto auto 1fr auto;
+    grid-template-rows: auto auto 40px auto auto;
     color: var(--spacegrey-800);
 }
 
@@ -129,10 +129,13 @@ body {
 }   */
 
 .footer {
-    grid-column: 1/-1;
-    grid-row: 5/6;
-    background-color: var(--spacegrey-800);
-    margin: var(--margin-large) calc(var(--margin-large) * -1) calc(var(--margin-large) * -1) calc(var(--margin-large) * -1);
-    padding: var(--padding-large);
+    grid-column: 2/3;
+    grid-row: 5;
+    background-color: var(--spacegrey-100);
+    padding: var(--padding-large); 
+    margin-top: var(--margin-large);
+    border-radius: var(--border-radius-small);
+    /* margin: var(--margin-large) calc(var(--margin-large) * -1) calc(var(--margin-large) * -1) calc(var(--margin-large) * -1);
+    padding: var(--padding-large); */
 }
 
