--- a/06_project_blog/src/components/Card/Card.css
+++ b/06_project_blog/src/components/Card/Card.css
@@ -5,8 +5,8 @@ ul.cards-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(248px, 1fr));
     gap: var(--gap-large);
-    min-height: calc(100% - 240px);
-    overflow-y: auto;
+    /* min-height: calc(100%); */
+    /* overflow-y: auto; */
     margin-top: var(--margin-medium);
     padding: var(--padding-small);
 }
