--- a/06_project_blog/src/components/Copyright/Copyright.css
+++ b/06_project_blog/src/components/Copyright/Copyright.css
@@ -1,5 +1,5 @@
 .copyright {
-    color: var(--spacegrey-100);
+    color: var(--spacegrey-600);
     font-size: var(--font-size-medium);
     text-align: center;
     opacity: 75%;
